--- a/css/styles.css
+++ b/css/styles.css
@@ -11,18 +11,22 @@
 }
 
 body {
-    background-color: #E5E5E5;
+    background-color: var(--main-white-text);
     color: var(--primary-text-color);
     font-family: Roboto, sans-serif;
-
+    font-size: 14px;
+    
     letter-spacing: 0.03em;
+}
 
-}
-address {
-    font-family: inherit;
-}
 .list {
     list-style: none;
+}
+.link {
+    text-decoration: none;
+}
+.hide {
+    display: none;
 }
 
 
@@ -31,75 +35,53 @@ address {
     font-family: Raleway, sans-serif;
     font-size: 26px;
     line-height: 1.19;
-
-    text-decoration: none;
-}
-.head.logo {
     color: var(--main-black-text);
 }
 .footer.logo {
     color: var(--main-white-text);
 }
-.logo-accent {
-    color: var(--accent-color);
-}
+
 
 
 /* site nav */
-.site-nav .link {
+.site-nav .link,
+.site-contacts .link {
     color: var(--primary-text-color);
 
     font-weight: 500;
-    font-size: 14px;
     line-height: 1.43;
-    letter-spacing: 0.02em;
-
-    text-decoration: none;
-
+    letter-spacing: 0.02em;  
 }
+.streat.link:hover,
+.streat.link:focus,
+.contacts.link:hover,
+.contacts.link:focus,
+.logo-accent,
+.site-nav .link.current,
 .site-nav .link:hover,
-.site-nav .link:focus {
-    color: var(--accent-color);
-}
-.site-nav .link.current {
+.site-nav .link:focus,
+.site-contacts .link:hover,
+.site-contacts .link:focus {
     color: var(--accent-color);
 }
 
 /* site main contacts  */
 .site-contacts .link {
     color: var(--secondary-text-color);
+}
 
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.43;
-    letter-spacing: 0.02em;
-
-    text-decoration: none;
-
-}
-.site-contacts .link:hover,
-.site-contacts .link:focus {
-    color: var(--accent-color)
-}
-.section-title {
-    color: var(--primary-text-color);
-}
-.section-title.hide {
-    color: 0,0,0,0,0;
-}
 
 /* buttons */
-button {
-    font-family: inherit;
-}
+
 .button.hero {
-    font-weight: 700;
+    font-family: inherit;
     font-size: 16px;
     line-height: 1.88;
     display: flex;
     align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
+    border: none;
 }
 .button.primary {
     color: var(--main-white-text);
@@ -109,12 +91,14 @@ button {
     color: var(--primary-text-color);
     background-color: var(--secondary-bg-color);
 
+    font-family: inherit;
     font-weight: 500;
     font-size: 16px;
     line-height: 1.62;
-    
     text-align: center;
+    border: none;
 }
+.button.secondary.activ,
 .button.secondary:hover,
 .button.secondary:focus {
     color: var(--main-white-text);
@@ -122,7 +106,10 @@ button {
 }
 
 /* Hero */
-.hero-title {
+.hero {
+    background-color: var(--footer-color);
+}
+.hero .title {
     color: var(--main-white-text);
 
     font-weight: 900;
@@ -133,38 +120,39 @@ button {
     text-transform: uppercase;
 }
 /* Особенности */
-.hide {
-    display: none;
-}
-.features-list.title {
 
-    font-weight: 700;
+.features-title {
     font-size: 14px;
+
     line-height: 1.43;
     text-transform: uppercase;
 }
-.features .text {
+.features-description {
     color: var(--secondary-text-color);
 
-    font-weight: 400;
-    font-size: 14px;
     line-height: 1.71;
 }
-.section-title {
+.whatwedo-title,
+.team-title,{
 
-    font-weight: 700;
     font-size: 36px;
     line-height: 1.17;
     text-align: center;
 }
-.team-title,
-.team .text {
-    font-weight: 500;
+.team {
+    background-color: var(--secondary-bg-color);
+}
+.member-title,
+.member-description {
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
 }
-.team .text {
+.member-title {
+    font-weight: 500;
+}
+
+.member-description {
     color:var(--secondary-text-color);
 }
 .card {
@@ -173,41 +161,31 @@ button {
 }
 .work.link{
     color: var(--primary-text-color);
-    text-decoration: none;
 }
 .work-title {
-    font-weight: 700;
     font-size: 18px;
     line-height: 2;
     
     letter-spacing: 0.06em;
 }
-.work .text {
+.work-description {
     color: var(--secondary-text-color);
 
-    font-weight: 400;
     font-size: 16px;
     line-height: 1.88;
-
 }
 
 footer {
     background-color: var(--footer-color);
 }
-.adress {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    
-    text-decoration: none;
-    letter-spacing: 0.03em;
-}
 
-.adress.steet {
+.streat.link {
     color: var(--main-white-text);
 }
-.adress.contacts {
+.contacts.link {
     color: var(--adress-text);
 }
+.streat.link,
+.contacts.link {
+    font-style: normal;
+    line-height: 1.71;
